--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ pydantic>=2.0.0
 mlx-lm>=0.14.0
 aiohttp>=3.9.0
 python-multipart>=0.0.6
+
+# Testing dependencies
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+pytest-mock>=3.11.0
+httpx>=0.24.0
